# jumpstart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt  configure.h.cmake  def-platform.cmake  sokol-compiler.cmake  sokol-lib.cmake
3rd/sokol-misc/: sokol-lib.cpp  sokol_impl.cpp
src/: CMakeLists.txt
src/mono/: CMakeLists.txt  world.h
src/mono/engine/: Database.h  TypeInfo.h  hexmap.h  index2.h
src/mono/sample/: heap.h
src/mono/world/: Time.h
src/mono/world/landscape/: Relief.h
src/platform/: CMakeLists.txt  assert.h  debug.cpp  debug.h  defines.h  index.h  macros.h  traits.h
src/samples/: 01-texcube.c  01-texcube.glsl  02-shadows.c  03-glmcube.cpp  03-glmcube.glsl  04-glmcube-init.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/mono/: CMakeLists.txt  database.cpp  hexmap.cpp  main.cpp  sampleDB.cpp  worldTime.cpp
test/platform/: CMakeLists.txt  test-assert.cpp  test-debug.cpp
