add_library(dbgui STATIC dbgui.cpp dbgui.h)
target_compile_definitions(dbgui PRIVATE SOKOL_GLCORE33 USE_DBG_UI)
target_link_libraries(dbgui PRIVATE imguiLib sokolLib)

add_executable(01-texcube WIN32 01-texcube.c)
add_shaders(01-texcube LANGS glsl330 SHADERS 01-texcube.glsl)
target_compile_definitions(01-texcube PRIVATE SOKOL_GLCORE33 USE_DBG_UI)
target_link_libraries(01-texcube PRIVATE sokolLib dbgui)

add_executable(02-shadows WIN32 02-shadows.c)
add_shaders(02-shadows LANGS glsl330 SHADERS 02-shadows.glsl)
target_compile_definitions(02-shadows PRIVATE SOKOL_GLCORE33 USE_DBG_UI)
target_link_libraries(02-shadows PRIVATE sokolLib dbgui)

add_executable(03-glmcube WIN32 03-glmcube.cpp)
set_property(TARGET 03-glmcube PROPERTY CXX_STANDARD 20)
add_shaders(03-glmcube LANGS glsl330 hlsl5 metal_ios SHADERS 03-glmcube.glsl)
target_compile_definitions(03-glmcube PRIVATE SOKOL_GLCORE33 USE_DBG_UI)
target_link_libraries(03-glmcube PRIVATE sokolLib dbgui glm::glm)

add_executable(04-glmcube-init WIN32 04-glmcube-init.cpp )
set_property(TARGET 04-glmcube-init PROPERTY CXX_STANDARD 20)
add_shaders(04-glmcube-init LANGS glsl330 hlsl5 metal_ios SHADERS 03-glmcube.glsl)
target_compile_definitions(04-glmcube-init PRIVATE SOKOL_GLCORE33 USE_DBG_UI)
target_link_libraries(04-glmcube-init PRIVATE sokolLib dbgui glm::glm)
